--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,27 +1,28 @@
-# This is  basic workflow to help you get started with Actions
-
+# This is a basic workflow to help you get started with Actions
 name: Pipeline
+
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [main]
     paths:
-    - Chapters15/**
-    - .github/workflows/pipeline.yaml
+      - Chapters15/**
+      - .github/workflows/pipeline.yaml
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  # Env to set reusable variables
+
+# Env to set reusable variables
 env:
   ACRNAME: handsonakspipelines
+
 jobs:
-    # This workflow contains a single job called "CI"
+  # This workflow contains a single job called "CI"
   CI:
-      # The type of runner that the job will run on
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
-        # Checks-out your repository under $GITHUB_WORKSPACE, so
-your job can access it
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Git checkout
         uses: actions/checkout@v2
       - name: az CLI login
@@ -35,11 +36,4 @@ your job can access it
         with:
           context: ./Chapter15
           push: true
-          tags: ${{ env.ACRNAME }}.azurecr.io/website/website:${{
-github.run_number }}
-
-          
-          
-       
-      
-     
+          tags: ${{ env.ACRNAME }}.azurecr.io/website/website:${{ github.run_number }}
